diagnostics/tests/snapshots/multi_line_label.snap
error[TEST0101]: broken function
 --> main.ts:1:1
  |
1 | function test() {
  | ^^^^^^^^^^^^^^^^^ broken function
2 |   return 1;
  | ^^^^^^^^^^^
3 | }
  | ^
